--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 @import url('./normalize.css');
 @import url('./palette.css');
+@import url('./progress.css');
 
 @font-face {
   font-family: "Roboto";
@@ -50,26 +51,6 @@ body {
   width: 120px;
   display: grid;
   place-items: center;
-}
-
-.progress {
-  width: 100%; /* указывать ширину через js */
-  aspect-ratio: 1;
-  background: conic-gradient(var(--color-primary) var(--percent, 80%), var(--color-platinum) 0);
-  border-radius: 50%;
-  position: relative;
-}
-
-.progress::after {
-  content: "";
-  width: 83%;
-  background-color: var(--background-color);
-  aspect-ratio: 1;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
 }
 
 .wrapper__controls {
