--- a/styles/main.css
+++ b/styles/main.css
@@ -119,7 +119,8 @@ body {
   transition: var(--switch-transition);
 }
 
-.switch:focus-within .switch__slider {
+.switch:focus-within .switch__slider,
+.value:focus-within .controls-input {
   outline: 1px solid var(--color-primary);
 }
 
