--- a/styles/progress.css
+++ b/styles/progress.css
@@ -1,5 +1,5 @@
 .progress {
-  width: 100%; /* TODO: указывать ширину через js */
+  width: 100%;
   aspect-ratio: 1;
   background: conic-gradient(var(--color-primary) var(--percent, 0), var(--color-platinum) 0);
   border-radius: 50%;
@@ -8,7 +8,7 @@
 
 .progress::after {
   content: "";
-  width: 83%; /* TODO: управлять шириной через js */
+  width: 83%;
   background-color: var(--background-color);
   aspect-ratio: 1;
   position: absolute;
